--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -25,6 +25,12 @@
         <action
             android:id="@+id/action_loginFragment_to_dasbordFragment"
             app:destination="@id/dasbordFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment2"
+            app:destination="@id/registerFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -34,6 +40,9 @@
         <action
             android:id="@+id/action_registerFragment_to_dasbordFragment"
             app:destination="@id/dasbordFragment" />
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/dasbordFragment"
