--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -48,5 +48,9 @@
         android:id="@+id/dasbordFragment"
         android:name="com.project1forcreativeitinstitute.orrio.views.dashbord.DasbordFragment"
         android:label="fragment_dasbord"
-        tools:layout="@layout/fragment_dashbord" />
+        tools:layout="@layout/fragment_dashbord" >
+        <action
+            android:id="@+id/action_dasbordFragment_to_startFragment"
+            app:destination="@id/startFragment" />
+    </fragment>
 </navigation>
