--- a/app/src/main/res/navigation/seller_nav.xml
+++ b/app/src/main/res/navigation/seller_nav.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/myProductFragment"
-        android:name="com.project1forcreativeitinstitute.orrio.myProductFragment"
+        android:name="com.project1forcreativeitinstitute.orrio.views.dashboard.seller.product.MyProductFragment"
         android:label="Product"
         tools:layout="@layout/fragment_my_product" />
     <fragment
         android:id="@+id/uploadProductFragment"
-        android:name="com.project1forcreativeitinstitute.orrio.uploadProductFragment"
+        android:name="com.project1forcreativeitinstitute.orrio.views.dashboard.seller.upload.UploadProductFragment"
         android:label="Upload Product"
         tools:layout="@layout/fragment_upload_product" />
     <fragment
         android:id="@+id/sellerProfileFragment"
-        android:name="com.project1forcreativeitinstitute.orrio.sellerProfileFragment"
+        android:name="com.project1forcreativeitinstitute.orrio.views.dashboard.seller.profile.SellerProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_seller_profile" />
 </navigation>
